k8s/prometheus/templates/statefulset.yaml
# 3. Prometheus Deployment
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          # lifecycle:
          #   postStart:
          #     exec:
          #       command: ["/bin/sh", "-c", "mkdir /tmp/targets"]
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--web.enable-lifecycle"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-storage
              mountPath: /prometheus
            - name: config-volume
              mountPath: /etc/prometheus
            - name: targets
              mountPath: /etc/prometheus/targets
          resources: {}
        # - name: config-reloader
        #   image: quay.io/coreos/configmap-reload
        #   args:
        #     - --volume-dir=/etc/prometheus
        #     - --webhook-url=http://localhost:9090/-/reload
        #   volumeMounts:
        #     - name: config-volume
        #       mountPath: /etc/prometheus
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
        - name: prometheus-storage
          persistentVolumeClaim:
            claimName: prometheus-data
        - name: targets
          configMap:
            name: prometheus-targets
