k8s/prometheus/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: prometheus-ingress
spec:
  defaultBackend:
    service:
      name: prometheus
      port:
        number: 9090
  rules:
  - host: prom.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  prometheus
            port: 
              number: 9090
